Made 1.3 Angular App
Init Angular App structure

First Run

Made files, and web styles

Repair app

Added navbar and correct links

Made better styles for app

Fix dockerfile

Update README.md

--- a/1_3_Angular_App/src/app/app.component.html
+++ b/1_3_Angular_App/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
@@ -170,17 +171,11 @@
   }
 </style>
 
-<mat-toolbar color="primary" class="toolbar">
-  <h1>CAR SERVICE APP</h1>
+<mat-toolbar color="primary">
+  <span>Pokémon App</span>
   <span class="spacer"></span>
-  <button mat-raised-button color="secondary" routerLink="/cars">
-    <mat-icon>home</mat-icon>
-    Home
-  </button>
-  <button mat-raised-button color="secondary" routerLink="/cars/new">
-    <mat-icon>add</mat-icon>
-    Add Car
-  </button>
+  <button mat-button routerLink="/pokemons">Home</button>
 </mat-toolbar>
+<!-- TODO Fix dockerfile and docker-compose.yml -->
 
 <router-outlet/>
