--- a/1_3_Angular_App/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/1_3_Angular_App/src/app/components/pokemon-list/pokemon-list.component.html
@@ -12,11 +12,14 @@
     <mat-grid-list [cols]="cols" rowHeight="1:1" gutterSize="1rem">
 
       <mat-grid-tile *ngFor="let pokemon of filteredPokemonList">
-        <mat-card class="pokemon-card" [routerLink]="['/pokemons', pokemon.name]">
+        <mat-card class="pokemon-card" [routerLink]="['/pokemons', pokemon.name]" [ngClass]="{'favorite': isFavorite(pokemon.name)}">
           <img [ngSrc]="getPokemonImage(pokemon.url)" [alt]="pokemon.name" class="pokemon-thumbnail" width="100" height="100" />
           <mat-card-header>
             <mat-card-title>{{ pokemon.name | titlecase }}</mat-card-title>
           </mat-card-header>
+          <button mat-button color="accent" (click)="toggleFavorite(pokemon.name, $event)">
+            {{ isFavorite(pokemon.name) ? 'Usuń z ulubionych' : 'Dodaj do ulubionych' }}
+          </button>
         </mat-card>
       </mat-grid-tile>
 
