--- a/1_3_Angular_App/src/app/components/pokemon-list/pokemon-list.component.scss
+++ b/1_3_Angular_App/src/app/components/pokemon-list/pokemon-list.component.scss
@@ -9,12 +9,17 @@
 
 .pokemon-card {
   cursor: pointer;
-  transition: transform 0.2s;
+  transition: transform 0.2s, border-color 0.2s;
   opacity: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   animation: fadeInUp 0.5s forwards;
+  border: 2px solid transparent;
+}
+
+.pokemon-card.favorite { /* ### ZMIANA ### */
+  border-color: red;
 }
 
 .pokemon-card:hover {
